--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,4 +32,11 @@ body {
     text-xs tracking-widest text-gray-500 transition-all 
     hover:border-[#1e95aa]/40 hover:text-[#1e95aa]/40
   }
+  
+  .contactInput{
+    @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424]
+     text-gray-500 placeholder-gray-500 transition-all 
+     focus:border-[#1e95aa]/40 focus:text-[#1e95aa]/70
+     hover:border-[#1e95aa]/20
+  }
 }
