--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,54 +18,66 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
-@layer components{
+/* p {
+  font-family: 'Fira Code';
+} */
+
+@layer components {
   .heroButton {
-    @apply px-6 py-2 border border-[#242424] rounded-full uppercase 
-    text-xs tracking-widest text-gray-500 transition-all 
-    hover:border-[#1e95aa]/40 hover:text-[#1e95aa]/40
+    @apply px-6 py-2 border border-[#242424] rounded-full uppercase text-xs tracking-widest text-gray-500 transition-all hover:border-[#1e95aa]/40 hover:text-[#1e95aa]/40
   }
-  
-  .contactInput{
-    @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424]
-     text-gray-500 placeholder-gray-500 transition-all 
-     focus:border-[#1e95aa]/40 focus:text-[#1e95aa]/70
-     hover:border-[#1e95aa]/20
+
+  .contactInput {
+    @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424] text-gray-500 placeholder-gray-500 transition-all focus:border-[#1e95aa]/40 focus:text-[#1e95aa]/70 hover:border-[#1e95aa]/20
   }
 }
 
-@layer utilities{
+@layer utilities {
 
   /* Sonny's styling */
-  .scrollbar::-webkit-scrollbar-track {
+  /* .scrollbar::-webkit-scrollbar-track {
     --scrollbar-track: rgb(156 163 175 / 0.2)
   }
 
   .scrollbar::-webkit-scrollbar-thumb {
     --scrollbar-thumb: rgb(30 149 170 / 0.4)
-  }
-  
+  } */
+
   /* ios-like styling */
+
+  /* Gives the trackpad a background */
   /* .scrollbar::-webkit-scrollbar {
     background-color: rgb(156 163 175 / 0.2);
-    width: 16px;  
+    width: 16px;
   } */
-  
+
+  /* Removes faint border colour */
   /* .scrollbar::-webkit-scrollbar-thumb {
     background-color: rgb(30 149 170 / 0.4);
-    border-radius: 16px;
-    border: 4px solid rgb(156 163 175 / 0.2);
+    border-radius: 10px;
+    border: 4px solid rgba(156 163 175 / 0.2);
+  } */
+
+  .scrollbar::-webkit-scrollbar {
+    width: 16px;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background-color: rgb(30 149 170 / 0.4);
+    border-radius: 10px;
+    /* border: 4px solid rgba(156 163 175 / 0.2); */
+  }
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(30, 149, 170);
   }
 
   .scrollbar::-webkit-scrollbar-button {
-    display:none;
-  } */
+    display: none;
+  }
 
 }
