--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,7 +29,7 @@ body {
 
 @layer components {
   .heroButton {
-    @apply px-6 py-2 border border-[#242424] rounded-full uppercase text-xs tracking-widest text-gray-500 transition-all hover:border-[#1e95aa]/40 hover:text-[#1e95aa]/40
+    @apply px-6 py-2 border lg:border-[#242424] border-[#1e95aa]/40 rounded-full uppercase text-xs tracking-widest text-gray-500 transition-all hover:border-[#1e95aa]/40 hover:text-[#1e95aa]/40
   }
 
   .contactInput {
